--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,23 @@
 {
-  "name": "polymer-spa-template",
+  "name": "polymer-simple-router",
   "version": "0.0.0",
   "authors": [
     "Po-Ying Chen <poying.me@gmail.com>"
   ],
   "keywords": [
     "polymer",
-    "spa",
-    "single",
-    "page",
-    "apploaction"
+    "router"
   ],
   "license": "MIT",
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
+    "public",
+    "app",
     "test",
     "tests"
   ],
   "dependencies": {
-    "polymer": "~0.0.20131010",
-    "html5-history-api": "~4.0.2"
   }
 }
