--- a/package.json
+++ b/package.json
@@ -6,23 +6,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "git submodule init"
+    "install": "git submodule init",
+    "start": "node ./node_modules/http-server/bin/http-server ./public"
   },
   "author": "Po-Ying Chen <poying.me@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "grunt-contrib-concat": "~0.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-jshint": "~0.6.4",
-    "grunt-http-server": "0.0.2",
     "grunt-contrib-jade": "~0.8.0",
     "grunt-contrib-stylus": "~0.9.0",
-    "grunt-contrib-cssmin": "~0.6.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-connect": "~0.5.0"
+    "grunt-contrib-connect": "~0.5.0",
+    "http-server": "~0.5.5"
   }
 }
